--- a/train.ipynb
+++ b/train.ipynb
@@ -6,7 +6,7 @@
       "name": "train.ipynb",
       "provenance": [],
       "history_visible": true,
-      "authorship_tag": "ABX9TyOVN0i1dBnTcpTIgAoAi3q+"
+      "authorship_tag": "ABX9TyNJGMjlMgsopgkHuDBAsZ+b"
     },
     "kernelspec": {
       "name": "python3",
@@ -1053,7 +1053,7 @@
         "            binary_acc+=1\n",
         "        \n",
         "        ii = np.where(out_identity[i] == max(out_identity[i]))\n",
-        "        print(ii)\n",
+        "        #print(ii)\n",
         "        for j in range(len(out_identity[i])):\n",
         "            out_identity[i,j]=0\n",
         "        out_identity[i,ii]=1\n",
